# workready-api

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  STAGES-4-5-6.md  SYSTEM.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker.yml
docs/superpowers/plans/: 2026-04-14-hiring-desk-anythingllm.md  2026-04-14-team-communications-layer3.md  2026-04-16-portal-sidebar-teams-ux.md
docs/superpowers/specs/: 2026-04-14-workready-team-communications-design.md  2026-04-14-workready-team-communications-future-work.md  2026-04-16-portal-sidebar-teams-ux-design.md
jobs/: horizon-foundation.json  ironvale-resources.json  meridian-advisory.json  metro-council-wa.json  nexuspoint-systems.json  southern-cross-financial.json
scripts/: audit_personas.py  smoke_availability.py  smoke_chat_routes.py  smoke_comms_monitor.py  smoke_context_builder.py  smoke_mail_classifier.py  smoke_persona_audit.py  smoke_team_directory.py
workready_api/: __init__.py  admin.py  app.py  assessor.py  availability.py  blocking.py  comms_monitor.py  context_builder.py  db.py  email_registry.py  exit_interview.py  interview.py  jobs.py  journey_report.py  lunchroom.py  lunchroom_chat.py  mail.py  models.py  notifications.py  pdf.py  performance_review.py  placement.py  scheduling.py  talk_buddy_export.py  task_reviewer.py  team_directory.py
workready_api/data/: public_holidays.py
