[project]
name = "workready-api"
version = "0.1.0"
description = "Resume assessment API for the WorkReady simulation"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pymupdf>=1.24",
]

[project.optional-dependencies]
llm = ["httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
