[project]
name = "workready-api"
version = "0.2.0"
description = "Simulation backend for WorkReady — tracks student progress through 6 internship stages"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "pymupdf>=1.24",
    "httpx>=0.28.1",
]

[project.optional-dependencies]
llm = ["httpx>=0.27"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
